Fixed layout on mobile

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -71,7 +71,7 @@ body {
     background-color: #4f4f4f;
     border: none;
     border-radius: 2px;
-    color: whitesmoke;
+    color: #ededed;
     padding: .75rem 1.5rem 1rem 1.5rem;
     text-align: center;
     text-decoration: none;
@@ -123,40 +123,29 @@ body {
 
 }
 */
-.settings-button {
+.settings-area {
   position: absolute;
   top: 2rem;
-  right: 2rem;
-  text-decoration: none;
-  background-color: #828282;
-  color: whitesmoke;
-  font-size: 1.5rem;
-  padding: 1rem;
-  border-radius: 3px;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-  transition: all 0.2s;
-  cursor: pointer; }
-  .settings-button:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.3); }
-    .settings-button:hover::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0; }
-  .settings-button:active, .settings-button:focus {
-    transform: translateY(-1px);
+  right: 2rem; }
+  .settings-area__button {
+    text-decoration: none;
+    background-color: #828282;
+    color: #ededed;
+    font-size: 1.5rem;
+    padding: 1rem;
+    border: none;
+    outline: none;
+    border-radius: 3px;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    outline: none; }
-  .settings-button::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s; }
+    transition: all 0.2s;
+    cursor: pointer; }
+    .settings-area__button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+    .settings-area__button:active, .settings-area__button:focus {
+      transform: translateY(-1px);
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+      outline: none; }
 
 .flex-container {
   display: flex;
@@ -192,23 +181,29 @@ body {
   text-align: center;
   font-family: 'Merriweather', serif;
   font-weight: 700; }
+  @media (max-width: 600px) {
+    .section-canI {
+      height: 20rem;
+      line-height: 20rem; } }
   .section-canI__span {
     font-size: 32rem;
     font-weight: 400;
     color: #4f4f4f; }
     @media (max-width: 600px) {
       .section-canI__span {
-        height: 20rem;
-        line-height: 20rem;
         font-size: 20rem; } }
 
 .section-weather {
   color: #4f4f4f; }
+  @media (max-width: 900px) {
+    .section-weather {
+      padding: 1rem; } }
   .section-weather__weather-box {
-    background-color: whitesmoke;
+    background-color: #ededed;
     max-width: 100rem;
     margin: 0 auto;
-    padding: 2rem; }
+    padding: 2rem;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
   .section-weather__header {
     font-size: 3rem;
     font-weight: 200;
