--- a/styles/sass/abstracts/_variables.scss
+++ b/styles/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $color-white: #FFF;
 
 $color-grey: #828282;
-$color-light-grey: lighten($color-grey, 45%);
+$color-light-grey: lighten($color-grey, 42%);
 $color-dark-grey: darken($color-grey, 20%);
 $color-black: #000;
 
