--- a/styles/sass/pages/_home.scss
+++ b/styles/sass/pages/_home.scss
@@ -22,52 +22,43 @@
 }
 */
 
-.settings-button {
+.settings-area {
+
     position:absolute;
     top: 2rem;
     right: 2rem;
-    text-decoration: none;
-    background-color: $color-grey;
-    color: $color-light-grey;
-    font-size: 1.5rem;
-    padding: 1rem;
-    border-radius: 3px;
-    box-shadow: 0 1rem 2rem rgba($color-black, .2);
-    transition: all 0.2s;
-    cursor: pointer;
 
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 2rem 3rem rgba($color-black, .3);
-
-        &::after {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
-    }
-
-    &:active,
-    &:focus {
-        transform: translateY(-1px);
-        box-shadow: 0 .5rem 1rem rgba($color-black, .2);
-
-        //Styling for the <button> element
-        //Requires the &:focus selector above
+    &__button {
+        text-decoration: none;
+        background-color: $color-grey;
+        color: $color-light-grey;
+        font-size: 1.5rem;
+        padding: 1rem;
+        border: none;
         outline: none;
-    }
+        border-radius: 3px;
+        box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+        transition: all 0.2s;
+        cursor: pointer;
 
-    &::after {
-        content: "";
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        border-radius: 100rem;
-        position:absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        transition: all 0.4s
+        &:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 1rem 2rem rgba($color-black, .2);
+        }
+
+        &:active,
+        &:focus {
+            transform: translateY(-1px);
+            box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+
+            //Styling for the <button> element
+            //Requires the &:focus selector above
+            outline: none;
+        }
+
     }
+    
+    
 }
 
 .flex-container {
@@ -114,14 +105,17 @@
     font-family: 'Merriweather', serif;
     font-weight: 700;
 
+    @include respond('phone') {
+        height: 20rem;
+        line-height: 20rem;
+    }
+
     &__span {
         font-size: 32rem;;
         font-weight: 400;
         color: $color-dark-grey;
 
         @include respond('phone') {
-            height: 20rem;
-            line-height: 20rem;
             font-size: 20rem;
         }
     }
@@ -131,11 +125,16 @@
 
     color: $color-dark-grey;
 
+    @include respond('tab-port') {
+        padding: 1rem;
+    }
+
     &__weather-box {
         background-color: $color-light-grey;
         max-width: 100rem;
         margin: 0 auto;
         padding: 2rem;
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
     }
     
     &__header {
